# SIMDBenchmark

./: .gitignore  CMakeLists.txt  FPAdd.h  FPDiv.h  FPMul.h  FPReduce.h  FPSqrt.h  FPSub.h  README.md  comvars.h  main.cpp
FP/: FPAdd.h  FPDiv.h  FPEQ.h  FPGT.h  FPIsZero.h  FPLT.h  FPMul.h  FPReduce.h  FPSqrt.h  FPSub.h
Int/: IntAdd.h  IntAnd.h  IntDiv.h  IntEQ.h  IntGT.h  IntIsZero.h  IntLT.h  IntMul.h  IntNot.h  IntOr.h  IntSL.h  IntSR.h  IntShuffle.h  IntSub.h  IntXor.h
benchmark/: CMakeLists.txt
cmake/: FastestAvailableArch.cmake
